mudança cor css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Barber - Barbers & Hair Cutting</title>
+  <title>Brond's</title>
   <meta name="title" content="Barber - Barbers & Hair Cutting">
   <meta name="description" content="This is a barber html template made by codewithsadee">
 
