--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
               </nav>
 
               <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+                <a href="https://booksy.com/pt-br/5455_barbearia-brond-s_barbearias_1042868_sao-bernardo-do-campo" class="social-link">
+                  <img src="./assets/images/iconeBooksy (2).png">
+                  
                 </a>
               </li>
 
@@ -151,7 +152,7 @@
           <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
         </button>
 
-        <a href="https://linktr.ee/brondsbarbearia" class="btn has-before">
+        <a href="https://linktr.ee/brondsbarbearia" target="_blank" class="btn has-before">
           <span class="span">Entre em contato</span>
 
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
