--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       -->
 
       <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('./assets/images/cadeira.jpeg')">
+        style="background-image: url('./assets/images/ESTHEVAN_BRONDS-65.JPG')">
         <div class="container">
 
           <h1 class="h1 hero-title">Brond's Barbearia</h1>
@@ -362,7 +362,7 @@
           <h2 class="h2 section-title text-center">Plano de precos</h2>
 
           <p class="section-text text-center">
-            Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua suspendisse
+            Para mais informacoes confira todos os detalhes pelo aplicativo de agendamento.
           </p>
 
           <div class="pricing-tab-container">
@@ -385,7 +385,7 @@
                     <i class="flaticon-relax" aria-hidden="true"></i>
                   </div>
 
-                  <p class="btn-text">Cabelo</p>
+                  <p class="btn-text">Visagismo</p>
                 </button>
               </li>
 
@@ -395,7 +395,7 @@
                     <i class="flaticon-massage" aria-hidden="true"></i>
                   </div>
 
-                  <p class="btn-text">Barba</p>
+                  <p class="btn-text">Corte</p>
                 </button>
               </li>
 
@@ -425,7 +425,7 @@
                     <i class="flaticon-razor-blade" aria-hidden="true"></i>
                   </div>
 
-                  <p class="btn-text">Visagismo</p>
+                  <p class="btn-text">Barba</p>
                 </button>
               </li>
 
@@ -442,12 +442,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Hair Cutting & Fitting</h3>
+                    <h3 class="h3 card-title">Barba com Esthevan</h3>
 
-                    <p class="card-text">Clean & simple 30-40 minutes</p>
+                    <p class="card-text">30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="89">$89</data>
+                  <data class="card-price" value="60">R$40</data>
 
                 </div>
               </li>
@@ -461,12 +461,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Shaving & Facial</h3>
+                    <h3 class="h3 card-title">Barba</h3>
 
-                    <p class="card-text">Clean & simple 30-40 minutes</p>
+                    <p class="card-text">30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="45">$45</data>
+                  <data class="card-price" value="80">R$30</data>
 
                 </div>
               </li>
@@ -480,12 +480,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Hair Color & Wash</h3>
+                    <h3 class="h3 card-title">Cabelo + Barba com Esthevan</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="35">$35</data>
+                  <data class="card-price" value="45">R$90</data>
 
                 </div>
               </li>
@@ -499,12 +499,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Body Massage</h3>
+                    <h3 class="h3 card-title">Corte com Esthevan</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="56">$56</data>
+                  <data class="card-price" value="56">R$60</data>
 
                 </div>
               </li>
@@ -518,12 +518,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Beauty & Spa</h3>
+                    <h3 class="h3 card-title">Visagismo</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="27">$27</data>
+                  <data class="card-price" value="350">R$350</data>
 
                 </div>
               </li>
@@ -537,12 +537,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Facial & Face Wash</h3>
+                    <h3 class="h3 card-title">Cabelo + Barba</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="63">$63</data>
+                  <data class="card-price" value="75">R$80</data>
 
                 </div>
               </li>
@@ -556,12 +556,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Backbone Massage</h3>
+                    <h3 class="h3 card-title">Corte</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="43">$43</data>
+                  <data class="card-price" value="43">R$50</data>
 
                 </div>
               </li>
@@ -575,12 +575,12 @@
                   </figure>
 
                   <div class="wrapper">
-                    <h3 class="h3 card-title">Meditation & Massage</h3>
+                    <h3 class="h3 card-title">Selagem + Luzes</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="74">$74</data>
+                  <data class="card-price" value="105">R$150</data>
 
                 </div>
               </li>
@@ -606,7 +606,7 @@
           <div class="title-wrapper">
 
             <div>
-              <h2 class="h2 section-title">Latest Photo Gallery</h2>
+              <h2 class="h2 section-title">Galeria de Fotos</h2>
 
               <p class="section-text">
                 Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua
@@ -615,7 +615,7 @@
             </div>
 
             <a href="#" class="btn has-before">
-              <span class="span">Explore More Gallery</span>
+              <span class="span">Veja mais fotos</span>
 
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
             </a>
@@ -628,13 +628,13 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/gallery-1.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="./assets/images/test.jpeg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Hair Cutting</h3>
+                  <h3 class="h3 card-title">Cortes</h3>
 
                   <p class="card-text">Barbers & Salon Services</p>
 
@@ -651,13 +651,13 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/gallery-2.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="./assets/images/ESTHEVAN_BRONDS-51.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Hair Cutting</h3>
+                  <h3 class="h3 card-title">Barba</h3>
 
                   <p class="card-text">Barbers & Salon Services</p>
 
@@ -674,13 +674,13 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/gallery-3.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Hair Cutting</h3>
+                  <h3 class="h3 card-title">Químicas</h3>
 
                   <p class="card-text">Barbers & Salon Services</p>
 
@@ -697,13 +697,13 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/gallery-4.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="./assets/images/ESTHEVAN_BRONDS-57.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Hair Cutting</h3>
+                  <h3 class="h3 card-title">Workshops</h3>
 
                   <p class="card-text">Barbers & Salon Services</p>
 
@@ -741,11 +741,10 @@
 
             <div class="card-content">
 
-              <h2 class="h2 section-title">Make Appointment</h2>
+              <h2 class="h2 section-title">Cadastre-se</h2>
 
               <p class="section-text">
-                Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua
-                suspendisse
+                Fique por dentro das nossas promocoes e nao perca as novidades.
               </p>
 
               <form action="" class="appoin-form">
@@ -972,7 +971,7 @@
             <li class="footer-list-item">
               <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
 
-              <a href="mailto:support@gmail.com" class="contact-link">support@gmail.com</a>
+              <a href="mailto:support@gmail.com" class="contact-link">brondsbarbearia@gmail.com</a>
             </li>
 
           </ul>
