--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <section class="section service" id="services" aria-label="services">
         <div class="container">
 
-          <h2 class="h2 section-title text-center">Servicos que oferecemos</h2>
+          <h2 class="h2 section-title text-center">Serviços que oferecemos</h2>
 
           <p class="section-text text-center">
             Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua suspendisse
