--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li>
             <ul class="social-list">
 
-              <li><a href="tel:11975437842" class="social-link">
+              <li><a href="https://api.whatsapp.com/message/RUB2NUSVFDCCF1?autoload=1&app_absent=0" class="social-link">
                 <img src="./assets/images/whatsapplogo.png" alt=""></a>
                
               </li>
@@ -138,12 +138,10 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#appointment" class="navbar-link" data-nav-link>Redes Sociais</a>
+              <a href="#appointment" class="navbar-link" data-nav-link>Workshop</a>
             </li>
 
-            <li class="navbar-item">
-              <a href="#" class="navbar-link" data-nav-link>Contatos</a>
-            </li>
+           
 
           </ul>
         </nav>
@@ -677,7 +675,7 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
@@ -700,7 +698,7 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-                  <img src="./assets/images/ESTHEVAN_BRONDS-57.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                  <img src="/assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                     class="img-cover">
                 </figure>
 
