--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 </head>
 
-<body id="top">
+<body>
 
-  <!-- 
+  <!--
     - #HEADER
   -->
 
@@ -167,9 +167,9 @@
 
 
   <main>
-    <article>
 
-      <!-- 
+
+      <!--
         - #HERO
       -->
 
@@ -196,7 +196,7 @@
 
 
 
-      <!-- 
+      <!--
         - #SERVICE
       -->
 
@@ -353,7 +353,7 @@
 
 
 
-      <!-- 
+      <!--
         - #PRICING
       -->
 
@@ -598,7 +598,7 @@
 
 
 
-      <!-- 
+      <!--
         - #GALLERY
       -->
 
@@ -726,7 +726,7 @@
         <!-- video -->
 
 
-        <section>
+
           <div class="ytVideo">
             <h2 class="videoType">WORKSHOP</h2>
             <iframe width="100%" id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
@@ -735,81 +735,22 @@
 
 
 
-            <!-- 
+            <!--
     - #FOOTER
   -->
 
-            <footer class="footer has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
-              <div class="container">
-
-                <div class="footer-top">
-
-                  <div class="footer-brand">
-
-                    <a href="#" class="logo">
-                      <img src="./assets/images/logoo.jpg">
-                      <span class="span">Brond's Barbearia</span>
-                    </a>
-                    <p>
-                    <h2 class="fontFooter">💈 Orgulhosos em deixar você mais confiante !</h2>
-                    </p>
-                  </div>
 
 
-
-                  <ul class="footer-list">
-
-                    <li>
-                      <p class="footer-list-title">Entre Em Contato</p>
-                    </li>
-
-                    <li class="footer-list-item">
-                      <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
-
-                      <address class="contact-link">
-                        Rua Engenheiro Isaac Garcez, 151, 09619-110, São Bernardo do Campo
-                      </address>
-                    </li>
-
-                    <li class="footer-list-item">
-                      <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
-
-                      <a href="tel:11975437842" class="contact-link">(11) 97543-7842</a>
-                    </li>
-
-                    <li class="footer-list-item">
-                      <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
-
-                      <span class="contact-link">Terça - Sabado, 9:00- 20:00</span>
-                    </li>
-
-                    <li class="footer-list-item">
-                      <img src="./assets/images/iconeBooksy (3).png" alt="">
-
-                      <a href="https://booksy.com/pt-br/5455_barbearia-brond-s_barbearias_1042868_sao-bernardo-do-campo"
-                        class="contact-link">Agende um serviço</a>
-                    </li>
-
-                  </ul>
-
-                </div>
-
-              </div>
-
-              <div class="footer-bottom">
-                <p class="copyright">
-                  &copy; 2023 <a href="#" class="copyright-link">BROND'S BAEBER</a>. All Rights Reserved.
-                </p>
-              </div>
 
           </div>
+      </section>
           </footer>
 
 
 
 
 
-          <!-- 
+          <!--
     - #BACK TO TOP
   -->
 
@@ -821,17 +762,17 @@
 
 
 
-          <!-- 
+          <!--
     - custom js link
   -->
           <script src="./assets/js/script.js" defer></script>
 
-          <!-- 
+          <!--
     - ionicon link
   -->
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
           <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+  </main>
 </body>
 
 </html>
