--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="UTF-8">
@@ -192,7 +192,8 @@
         </div>
       </section>
 
-
+    </article>
+  </main>
 
 
 
@@ -801,9 +802,9 @@
                   &copy; 2023 <a href="#" class="copyright-link">BROND'S BAEBER</a>. All Rights Reserved.
                 </p>
               </div>
-
+            </footer>
           </div>
-          </footer>
+
 
 
 
@@ -831,7 +832,6 @@
   -->
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
           <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
 
 </html>
