--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="planos" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -360,7 +360,7 @@
 
       <section class="section pricing has-bg-image has-before" id="pricing" aria-label="pricing"
         style="background-image: url('./assets/images/pricing-bg.jpg')">
-        <div class="container">
+        <div class="container" id="planos">
 
           <h2 class="h2 section-title text-center">Planos e preços</h2>
 
@@ -512,7 +512,7 @@
                       class="img-cover">
                   </figure>
 
-                  <div class="wrapper">
+                  <div class="wrapper" id="cabelo-barba">
                     <h3 class="h3 card-title colorFont">Cabelo + Barba com o Esthevan</h3>
 
                     <p class="card-text">Clean & simple 30-40 minutes</p>
