--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <li>
                 <button class="filter-btn active" data-filter-btn="all">
                   <div class="btn-icon">
-                    <i class="flaticon-beauty-salon" aria-hidden="true"></i>
+                    <i class="flaticon-medal" aria-hidden="true"></i>
                   </div>
 
                   <p class="btn-text">Todos os precos</p>
@@ -385,7 +385,7 @@
               <li>
                 <button class="filter-btn" data-filter-btn="beauty-spa">
                   <div class="btn-icon">
-                    <i class="flaticon-relax" aria-hidden="true"></i>
+                    <i class="flaticon-hair-dye" aria-hidden="true"></i>
                   </div>
 
                   <p class="btn-text">Visagismo</p>
@@ -395,7 +395,7 @@
               <li>
                 <button class="filter-btn" data-filter-btn="body-treatments">
                   <div class="btn-icon">
-                    <i class="flaticon-massage" aria-hidden="true"></i>
+                    <i class="flaticon-scissors" aria-hidden="true"></i>
                   </div>
 
                   <p class="btn-text">Corte</p>
@@ -405,7 +405,7 @@
               <li>
                 <button class="filter-btn" data-filter-btn="face-washing">
                   <div class="btn-icon">
-                    <i class="flaticon-spa" aria-hidden="true"></i>
+                    <i class="flaticon-beauty-salon" aria-hidden="true"></i>
                   </div>
 
                   <p class="btn-text">Combo</p>
@@ -415,7 +415,7 @@
               <li>
                 <button class="filter-btn" data-filter-btn="meditations">
                   <div class="btn-icon">
-                    <i class="flaticon-scissors" aria-hidden="true"></i>
+                    <i class="flaticon-hair-dye" aria-hidden="true"></i>
                   </div>
 
                   <p class="btn-text">Química</p>
@@ -474,7 +474,7 @@
                 </div>
               </li>
 
-              <li data-filter="face-washing">
+              <li data-filter="body-treatments">
                 <div class="pricing-card">
 
                   <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
@@ -512,7 +512,7 @@
                 </div>
               </li>
 
-              <li data-filter="beauty-spa">
+              <li data-filter="face-washing">
                 <div class="pricing-card">
 
                   <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
@@ -550,7 +550,7 @@
                 </div>
               </li>
 
-              <li data-filter="body-treatments">
+              <li data-filter="beauty-spa">
                 <div class="pricing-card">
 
                   <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
@@ -730,7 +730,7 @@
         <section>
           <div class="ytVideo">
             <h2 class="videoType">WORKSHOP</h2>
-            <iframe width="100%" id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
+            <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
 
 
 
