--- a/index.html
+++ b/index.html
@@ -382,15 +382,7 @@
                 </button>
               </li>
 
-              <li>
-                <button class="filter-btn" data-filter-btn="beauty-spa">
-                  <div class="btn-icon">
-                    <i class="flaticon-hair-dye" aria-hidden="true"></i>
-                  </div>
-
-                  <p class="btn-text">Visagismo</p>
-                </button>
-              </li>
+    
 
               <li>
                 <button class="filter-btn" data-filter-btn="body-treatments">
@@ -553,7 +545,7 @@
               <li data-filter="beauty-spa">
                 <div class="pricing-card">
 
-                  <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
+                  <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
                     <img src="./assets/images/ESTHEVAN_BRONDS-59 (1).jpg" width="90" height="90" alt="Backbone Massage"
                       class="img-cover">
                   </figure>
@@ -731,6 +723,7 @@
           <div class="ytVideo">
             <h2 class="videoType">WORKSHOP</h2>
             <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
+          </section>    
 
 
 
@@ -750,9 +743,10 @@
                     <a href="#" class="logo">
                       <img src="./assets/images/logoo.jpg">
                       <span class="span">Brond's Barbearia</span>
-                    </a>
+                    </a> 
+                    <img src="./assets/images/barber (1).png" alt="">
                     <p>
-                    <h2 class="fontFooter">💈 Orgulhosos em deixar você mais confiante !</h2>
+                    <h2 class="fontFooter"> Orgulhosos em deixar você mais confiante !</h2>
                     </p>
                   </div>
 
