direcionamento dos botoes

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             Procura uma barbearia de confianca e com otimos profissionais? Conheca a Brond's Barbearia!
           </p>
 
-          <a href="#" class="btn has-before">
+          <a href="#services" class="btn has-before">
             <span class="span">Explore nossos servicos</span>
 
             <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -227,7 +227,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -360,7 +360,7 @@
 
       <section class="section pricing has-bg-image has-before" id="pricing" aria-label="pricing"
         style="background-image: url('./assets/images/pricing-bg.jpg')">
-        <div class="container" id="planos">
+        <div class="container">
 
           <h2 class="h2 section-title text-center">Planos e preços</h2>
 
