--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="planos" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -271,7 +271,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -293,7 +293,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -315,7 +315,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -338,7 +338,7 @@
                   Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
 
-                <a href="#" class="card-btn" aria-label="more">
+                <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -702,7 +702,7 @@
 
                   <p class="card-text">Brond's Barbearia</p>
 
-                  <a href="#" class="card-btn" aria-label="Read more">
+                  <a href="#workshop" class="card-btn" aria-label="Read more">
                     <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                   </a>
 
@@ -719,8 +719,8 @@
         <!-- video -->
 
 
-        <section>
-          <div class="ytVideo">
+        <section id="workshop">
+          <div class="ytVideo"
             <h2 class="videoType">WORKSHOP</h2>
             <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
           </section>    
@@ -793,7 +793,7 @@
 
               <div class="footer-bottom">
                 <p class="copyright">
-                  &copy; 2023 <a href="#" class="copyright-link">BROND'S BAEBER</a>. All Rights Reserved.
+                  &copy; 2023 <a href="#" class="copyright-link">BROND'S BARBEARIA</a>. All Rights Reserved.
                 </p>
               </div>
             </footer>
