--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon">
+            <div class="card-icon" id="cortes">
               <i class="flaticon-salon"></i>
             </div>
 
@@ -227,15 +227,9 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
                 <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
@@ -243,7 +237,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon">
+            <div class="card-icon" id="barba">
               <img src="./assets/images/beard_4397805 (1).png" alt="">
             </div>
 
@@ -255,15 +249,9 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
                 <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
@@ -271,7 +259,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon">
+            <div class="card-icon" id="combo">
               <img src="./assets/images/pngwing.com (5).png" alt="">
             </div>
 
@@ -283,15 +271,9 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
                 <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
@@ -299,7 +281,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon">
+            <div class="card-icon" id="quimica">
               <i class="flaticon-hair-dye"></i>
             </div>
 
@@ -311,15 +293,9 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
                 <a href="#pricing" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
@@ -327,7 +303,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon">
+            <div class="card-icon" id="visagismoId">
               <i class="flaticon-shaving-razor"></i>
             </div>
 
@@ -339,21 +315,15 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
-                <a href="#pricing" class="card-btn" aria-label="more">
+                <a href="#visagismoDs" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
 
         <li>
-          <div class="service-card">
+          <div class="service-card" id="workshopId">
 
             <div class="card-icon">
               <img src="./assets/images/002-oficina.png">
@@ -368,15 +338,9 @@
               Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-<<<<<<< HEAD
-            <a href="#" class="card-btn" aria-label="more">
-              <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-=======
-                <a href="#pricing" class="card-btn" aria-label="more">
+                <a href="#workshopDs" class="card-btn" aria-label="more">
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
           </div>
         </li>
@@ -543,15 +507,10 @@
           <li data-filter="face-washing">
             <div class="pricing-card">
 
-<<<<<<< HEAD
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
                 <img src="./assets/images/ESTHEVAN_BRONDS-57 (1).jpg" width="90" height="90" alt="Beauty & Spa"
                   class="img-cover">
               </figure>
-=======
-                  <div class="wrapper" id="cabelo-barba">
-                    <h3 class="h3 card-title colorFont">Cabelo + Barba com o Esthevan</h3>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Cabelo + Barba com o Esthevan</h3>
@@ -743,15 +702,9 @@
 
               <p class="card-text">Brond's Barbearia</p>
 
-<<<<<<< HEAD
-              <a href="#" class="card-btn" aria-label="Read more">
+              <a href="#workshop" class="card-btn" aria-label="Read more">
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
               </a>
-=======
-                  <a href="#workshop" class="card-btn" aria-label="Read more">
-                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-                  </a>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
             </div>
 
@@ -767,26 +720,19 @@
 
 
     <section>
-      <div class="ytVideo">
+      <div class="ytVideo" id="workshopDs">
         <h2 class="videoType">WORKSHOP</h2>
         <iframe width="100%" id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
         <p class="videoTxt">em nosso Workshop</p>
+      </div>
     </section>
 
-<<<<<<< HEAD
-=======
-        <section id="workshop">
-          <div class="ytVideo"
-            <h2 class="videoType">WORKSHOP</h2>
-            <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
-          </section>    
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
 
     <!-- visagismo -->
 
 
-    <section>
+    <section id="visagismoDs">
       <h2 class="visagismo">VISAGISMO</h2>
       <div class="content">
         <p>
@@ -886,7 +832,6 @@
 
       </div>
 
-<<<<<<< HEAD
       <div class="footer-bottom">
         <p class="copyright">
           &copy; 2023 <a href="#" class="copyright-link">BROND'S BAEBER</a>. All Rights Reserved.
@@ -894,15 +839,6 @@
       </div>
     </footer>
     </div>
-=======
-              <div class="footer-bottom">
-                <p class="copyright">
-                  &copy; 2023 <a href="#" class="copyright-link">BROND'S BARBEARIA</a>. All Rights Reserved.
-                </p>
-              </div>
-            </footer>
-          </div>
->>>>>>> 5abdd31680d870ceff1581d5c61f06faff49a9db
 
 
 
