--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#appointment" class="navbar-link" data-nav-link>Workshop</a>
+              <a href="#workshopDs" class="navbar-link" data-nav-link>Workshop</a>
             </li>
 
 
@@ -787,7 +787,7 @@
 
               <p class="card-text">Brond's Barbearia</p>
 
-              <a href="#workshop" class="card-btn" aria-label="Read more">
+              <a href="#" class="card-btn" aria-label="Read more">
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
               </a>
 
@@ -812,7 +812,7 @@
 
 
       <section>
-        <div class="ytVideo">
+        <div class="ytVideo" id="workshopDs">
           <h2 class="videoType">WORKSHOP</h2>
           <p class="section-text"></p>
           <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
@@ -822,7 +822,7 @@
 
 
       <!-- visagismo -->
-      <section class="section gallery" id="gallery" aria-label="photo gallery">
+      <section class="section gallery" id="visagismoDs" aria-label="photo gallery">
         <div class="container">
 
           <div class="title-wrapper">
