--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/test.jpeg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/lugar.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
 
@@ -642,7 +642,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/ESTHEVAN_BRONDS-51.JPG" width="422" height="550" loading="lazy"
+              <img src="./assets/images/galeradocurso.JPG" width="422" height="550" loading="lazy"
                 alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -665,7 +665,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550"
+              <img src="./assets/images/horario.JPG" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -687,7 +687,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550"
+              <img src="./assets/images/ESTHEVAN_BRONDS-42.JPG" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -709,7 +709,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550"
+              <img src="./assets/images/ESTHEVAN_BRONDS-19.JPG" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -731,7 +731,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550"
+              <img src="./assets/images/primo.JPG" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -753,7 +753,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550"
+              <img src="./assets/images/terno.JPG" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
 
@@ -777,7 +777,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="/assets/images/388F3E99-C817-4BE6-BB10-FB656B0997E0.JPG" width="422" height="550" loading="lazy"
+              <img src="/assets/images/card.JPG" width="422" height="550" loading="lazy"
                 alt="Hair Cutting" class="img-cover">
             </figure>
 
