inicio limpeza do codigo e img

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 ().jpg" width="90" height="90" alt="Facial & Face Wash"
+                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (1).jpg" width="90" height="90" alt="Facial & Face Wash"
                   class="img-cover">
               </figure>
 
@@ -545,7 +545,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/ESTHEVAN_BRONDS-59 (1).jpg" width="90" height="90" alt="Backbone Massage"
+                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (2).jpg" width="90" height="90" alt="Backbone Massage"
                   class="img-cover">
               </figure>
 
@@ -628,10 +628,6 @@
               <h3 class="h3 card-title">Cortes</h3>
 
               <p class="card-text">Brond's Barbearia</p>
-
-              <a href="#" class="card-btn" aria-label="Read more">
-                <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-              </a>
 
             </div>
 
