logo, conexao visagismo wpp,agende um servico pt2

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </li>
 
               <li class="navbar-item">
-                <a href="https://linktr.ee/brondsbarbearia" class="navbar-link" data-nav-link>Agende um serviço</a>
+                <a href="https://linktr.ee/brondsbarbearia" class="navbar-link" data-nav-link>Agende seu Horário</a>
               </li>
 
 
