gap galeia de fotos

--- a/index.html
+++ b/index.html
@@ -690,10 +690,6 @@
 
 
         </div>
-
-        <a href="#" class="btn has-before">
-          <span class="span">Veja mais fotos</span>
-
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
 
@@ -796,7 +792,7 @@
     <!-- 
     - #FOOTER/rodapé
   -->
-    <section class="allFooter">
+    <section class="allFooter section">
       <footer class="footer has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
         <div class="container">
 
