--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       -->
 
       <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('./assets/images/ESTHEVAN_BRONDS-65.JPG')">
+        style="background-image: url('./assets/images/terno.JPG')">
         <div class="container">
 
           <h1 class="h1 hero-title">Brond's Barbearia</h1>
