proporcoes do video

--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
         - #Preços
       -->
 
-  <section class="section pricing has-bg-image has-before" id="pricing" aria-label="pricing"
+  <section class="section pricing has-bg-image has-before" aria-label="pricing"
     style="background-image: url('./assets/images/pricing-bg.jpg')">
-    <div class="container">
+    <div class="container" id="pricing">
 
       <h2 class="h2 section-title text-center">Planos e preços</h2>
 
