--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
         <li>
           <div class="content">
             <figure class="imgContainer" style="--width: 422; --height: 550;">
-              <img src="./assets/images/test.jpeg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/terno.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
           </div>
