css do visagismo

--- a/index.html
+++ b/index.html
@@ -597,44 +597,23 @@
 
 
       <div class="title-wrapper">
-
-
-
-        <div>
           <h2 class="h2 section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
-
-
-          <p class="section-text">
-            O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de revelar a essência
-            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            como ele pode realçar sua beleza de maneira autêntica e empoderadora. É hora de se expressar e brilhar
-            como você é! O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de revelar a
-            essência
-            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            como ele pode realçar sua beleza de maneira autêntica e empoderadora. É hora de se expressar e brilhar
-            como você é! O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de revelar a
-            essência
-            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            como ele pode realçar sua beleza de maneira autêntica e empoderadora. É hora de se expressar e brilhar
-            como você é!
-          </p>
-          <ul class="grid-list">
-
-
         </div>
         <li>
           <div class="content">
-            <figure class="imgContainer" style="--width: 422; --height: 550;">
-              <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
-                class="img-cover">
-            </figure>
-          </div>
-
-        </li>
-      </div>
+            <div class="text-container">
+              <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de revelar a essência
+                única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
+                personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
+               </p>
+            </div>
+            <div class="image-container">
+              <figure class="imgContainer" style="--width: 422; --height: 550;">
+                <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting">
+              </figure>
+            </div>
+          </div>               
+    </div>
 
       <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20consultoria%20de%20Visagismo"
         class="btn has-before">
