--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
 
   <section>
-    <div class="ytVideo" id="workshopDs">
+    <div id="workshopDs">
       <h2 class="videoType">WORKSHOP</h2>
       <p class="section-text"></p>
       <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
