--- a/index.html
+++ b/index.html
@@ -605,7 +605,14 @@
               <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de revelar a essência
                 única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
                 personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
+                O visagismo . 
+                
+                
                </p>
+    </div>
+
+    <ul class="grid-list">
+
             </div>
             <div class="image-container">
               <figure class="imgContainer" style="--width: 422; --height: 550;">
