--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
       <div class="title-wrapper">
           <h2 class="h2 section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
         </div>
+        <ul class="grid-list">
         <li>
           <div class="content">
             <div class="text-container">
@@ -612,6 +613,8 @@
                 <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting">
               </figure>
             </div>
+            </li>
+          </ul>
           </div>               
     </div>
 
