css do visagismo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta name="description" content="This is a barber html template made by Caio Messa & Matheus Fukase">
 
   <!-- 
+    - youtube
+  -->
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <!-- 
     - favicon
   -->
   <link rel="shortcut icon" href="../barber/assets/images/logoo.jpg" type="image/svg+xml">
@@ -593,7 +597,6 @@
   <!-- visagismo -->
 
   <section class="section gallery" id="visagismoDs" aria-label="photo gallery">
-    <div class="container">
 
 
       <div class="title-wrapper">
@@ -601,12 +604,15 @@
       </div>
       <li>
         <div class="content">
+          <div class="container">
           <div class="text-container">
             <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
               revelar a essência
               única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
               personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-              O visagismo .
+              O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+              revelar a essência
+             
             </p>
           </div>
 
@@ -614,7 +620,7 @@
 
         </div>
         <div class="image-container">
-          <figure class="imgContainer" style="--width: 422; --height: 550;">
+          <figure class="imgContainer" style="--width: 300; --height: 550;">
             <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy"
               alt="Hair Cutting">
           </figure>
@@ -653,6 +659,7 @@
       <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
     </div>
   </section>
+  
 
 
 
