--- a/index.html
+++ b/index.html
@@ -619,9 +619,10 @@
           <ul class="grid-list">
 
         </div>
+        
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/ESTHEVAN_BRONDS-58.JPG" width="422" height="550" loading="lazy"
+            <img src="./assets/images/terno.JPG" width="422" height="550" loading="lazy"
               alt="Hair Cutting">
           </figure>
         </div>
@@ -747,7 +748,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/terno.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/2FD2B634-C4AD-4A49-AE4E-E2E5D147564E.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
           </div>
