--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <nav>
                 <li>
                   <a href="https://www.youtube.com/channel/UCciWed3-msozgKMmPlyjY-A" class="social-link">
-                    <ion-icon name="logo-youtube" href=""></ion-icon>
+                    <ion-icon name="logo-youtube" href="https://www.youtube.com/channel/UCciWed3-msozgKMmPlyjY-A"></ion-icon>
                   </a>
                 </li>
               </nav>
@@ -118,7 +118,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <img src="./assets/images/IMG_1848 (1).png" </a>
+          <img src="./assets/images/IMG_1848 (1).png"></a>
 
           <nav class="navbar container" data-navbar>
             <ul class="navbar-list">
