ultimos passos pre entrega

--- a/index.html
+++ b/index.html
@@ -634,6 +634,7 @@
   </section>
 
 
+ 
 
 
 
@@ -645,6 +646,7 @@
 
 
   <section>
+    <h2 class="titleWorkshop">workshop </h2>
     <div id="workshopDs">
       <h2 class="videoType">WORKSHOP</h2>
       <p class="section-text"></p>
@@ -784,9 +786,9 @@
                 <img src="./assets/images/logoo.jpg">
 
               </a>
-              <img src="./assets/images/barber (1).png" alt="">
+
               <p>
-              <h2 class="fontFooter ,h2"> Orgulhosos em deixar você mais confiante !</h2>
+              <h2 class="fontFooter "> Orgulhosos em deixar você mais confiante !</h2>
               </p>
             </div>
 
@@ -832,7 +834,7 @@
         </div>
         <div class="footer-bottom">
           <p class="copyright">
-            &copy; 2023 <a href="#" class="copyright-link">BROND'S BAEBER</a>. All Rights Reserved.
+            &copy; 2023 <a href="#" class="copyright-link">BROND'S BARBER</a>. All Rights Reserved.
           </p>
         </div>
       </footer>
