limpeza do codigo pt1

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
               <nav>
                 <li>
                   <a href="https://www.youtube.com/channel/UCciWed3-msozgKMmPlyjY-A" class="social-link">
-                    <ion-icon name="logo-youtube" href="https://www.youtube.com/channel/UCciWed3-msozgKMmPlyjY-A"></ion-icon>
+                    <ion-icon name="logo-youtube"
+                      href="https://www.youtube.com/channel/UCciWed3-msozgKMmPlyjY-A"></ion-icon>
                   </a>
                 </li>
               </nav>
@@ -118,7 +119,7 @@
       <div class="container logoheader">
 
         <a href="#" class="logo">
-          <img src="./assets/images/IMG_1848 (1).png">
+          <img src="./assets/images/logoo.JPG">
         </a>
 
         <nav class="navbar container" data-navbar>
@@ -458,7 +459,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/pricing-2.jpg" width="90" height="90" alt="Shaving & Facial"
+                <img src="./assets/images/ESTHEVAN_BRONDS-51 (1) (1).jpg" width="90" height="90" alt="Shaving & Facial"
                   class="img-cover">
               </figure>
 
@@ -615,11 +616,11 @@
         </p>
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy"
-              alt="Hair Cutting" class="foto_mobile">
+            <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              class="foto_mobile">
           </figure>
         </div>
-        
+
       </div>
       <div class="visagismo_content2">
         <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20consultoria%20de%20Visagismo"
@@ -634,7 +635,7 @@
   </section>
 
 
- 
+
 
 
 
@@ -648,7 +649,7 @@
   <section>
     <h2 class="titleWorkshop">workshop </h2>
     <div id="workshopDs">
-      <h2 class="videoType">WORKSHOP</h2>
+
       <p class="section-text"></p>
       <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
     </div>
@@ -672,7 +673,7 @@
 
 
         </div>
-        
+
 
       </div>
 
@@ -741,8 +742,8 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/ESTHEVAN_BRONDS-36.JPG" width="422" height="550" loading="lazy"
-                alt="Hair Cutting" class="img-cover">
+              <img src="./assets/images/6BFC13BE-0270-427D-B338-715F535F610F.JPG" width="422" height="550"
+                loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
           </div>
         </li>
